# sdk.gst-plugins-emulator

./: AUTHORS  Makefile  NOTICE  README  aclocal.m4  autogen.sh  config.status  configure  configure.ac  libtool  project.config
packaging/: gst-plugins-emulator.changes  gst-plugins-emulator.spec
src/: Makefile  Makefile.am  Makefile.in  audioconvert.h  gstemul.c  gstemulapi.c  gstemulapi.h  gstemulapi2.c  gstemulapi2.h  gstemulcommon.h  gstemuldec.c  gstemuldev.c  gstemuldev.h  gstemulenc.c  gstemulnewdec.c  gstemulnewenc.c  gstemulutils.c  gstemulutils.h  gstmaru.c  gstmaru.h  gstmaruauddec.c  gstmaruaudenc.c  gstmarudec.c  gstmarudevice.c  gstmarudevice.h  gstmaruenc.c  gstmaruinterface.c  gstmaruinterface.h  gstmaruinterface3.c  gstmarumem.c  gstmarumem.h  gstmaruutils.c  gstmaruutils.h  gstmaruviddec.c  gstmaruvidenc.c  gstmyfilter.c  gstmyfilter.h  pixfmt.h
src/.deps/: libgstplugin_la-gstplugin.Plo
src/.libs/: libgstplugin.lai
